--- a/Completed/Keyboard.html
+++ b/Completed/Keyboard.html
@@ -1,1 +1,249 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Neuromorphic Keyboard</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;500&display=swap');
 
+    * {
+      box-sizing: border-box;
+      transition: all 0.5s ease-out;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+      text-rendering: optimizeLegibility;
+    }
+
+    html, body {
+      height: 100%;
+      margin: 0;
+      overflow: hidden;
+    }
+
+    body {
+      background: linear-gradient(45deg, #0a3d62, #38ada9);
+      background-size: 300% 300%;
+      animation: gradient 30s ease infinite;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-family: 'Roboto Mono', monospace;
+      color: #fff;
+    }
+
+    @keyframes gradient {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    #TA {
+      display: grid;
+      grid-template-rows: 30cqh 60cqh;
+      align-items: center;
+      justify-content: center;
+      font-family: 'Roboto Mono', monospace;
+      width: 90%;
+      height: 100%;
+    }
+
+    #TA #about {
+      text-align: center;
+      line-height: 1.2;
+    }
+
+    #TA #keyboard {
+      display: grid;
+      grid-template-rows: repeat(5, 5fr);
+      grid-template-columns: repeat(16, 16fr);
+      border-radius: 10px;
+      border: 2px solid rgba(230, 230, 230, 0.3);
+      padding: 1%;
+      box-shadow: -4px -4px 18px rgba(255, 255, 255, 0.8), 4px 4px 22px rgba(0, 0, 0, 0.3), 0px 0px 18px rgba(150, 150, 150, 0.15) inset;
+    }
+
+    #TA #keyboard .key {
+      grid-row: span 1;
+      grid-column: span 1;
+      transition: background-color 0.2s ease-out, border 0.2s ease-out;
+      background: rgba(10, 61, 98, 0.3);
+      color: #ffffff;
+    }
+
+    #TA #keyboard .key-sm, #TA #keyboard .key-md, #TA #keyboard .key-lg, #TA #keyboard .key-xlg {
+      grid-row: span 1;
+    }
+
+    #TA #keyboard .key-sm {
+      grid-column: span 2;
+    }
+
+    #TA #keyboard .key-md {
+      grid-column: span 3;
+    }
+
+    #TA #keyboard .key-lg {
+      grid-column: span 4;
+    }
+
+    #TA #keyboard .key-xlg {
+      grid-column: span 6;
+    }
+
+    #TA #keyboard #arrows {
+      width: 100%;
+      grid-column: span 3;
+      display: grid;
+      grid-template-rows: repeat(2, 2fr);
+      grid-template-columns: repeat(3, 3fr);
+    }
+
+    #TA #keyboard #arrows .left, #TA #keyboard #arrows .down, #TA #keyboard #arrows .right {
+      grid-row: 2;
+    }
+
+    #TA #keyboard #arrows .left {
+      grid-column: 1;
+    }
+
+    #TA #keyboard #arrows .down {
+      grid-column: 2;
+    }
+
+    #TA #keyboard #arrows .right {
+      grid-column: 3;
+    }
+
+    #TA #keyboard #arrows .up {
+      grid-column: 2;
+      grid-row: 1;
+    }
+
+    #TA button {
+      font-family: 'Roboto Mono', monospace;
+      backdrop-filter: blur(30px);
+      border: 0;
+      margin: 5px;
+      border-radius: 10px;
+      background: rgba(10, 61, 98, 0.3);
+      box-shadow: 5px 5px 6px rgba(10, 61, 98, 0.4), -4px -4px 6px rgba(255, 255, 255, 0.4);
+      color: #ffffff;
+      font-size: 1.8ch;
+      -webkit-background-clip: text;
+      background-clip: text;
+    }
+
+    #TA button.active {
+      border: 3px solid #38ada9; /* Cyan border when active */
+      background: rgba(56, 173, 169, 0.5);
+    }
+
+    kbd {
+      background-color: rgba(10, 61, 98, 0.6);
+      border-radius: 2px;
+      padding: 3px;
+      color: #fff;
+    }
+  </style>
+</head>
+<body>
+
+<div id="TA">
+  <div id="about">
+    <h1>Neuromorphic Keyboard</h1>
+  </div>
+
+  <div id="keyboard">
+    <button class="key" data-key="Backquote">`</button>
+    <button class="key" data-key="Digit1">1</button>
+    <button class="key" data-key="Digit2">2</button>
+    <button class="key" data-key="Digit3">3</button>
+    <button class="key" data-key="Digit4">4</button>
+    <button class="key" data-key="Digit5">5</button>
+    <button class="key" data-key="Digit6">6</button>
+    <button class="key" data-key="Digit7">7</button>
+    <button class="key" data-key="Digit8">8</button>
+    <button class="key" data-key="Digit9">9</button>
+    <button class="key" data-key="Digit0">0</button>
+    <button class="key" data-key="Minus">-</button>
+    <button class="key" data-key="Equal">=</button>
+    <button class="key-md" data-key="Backspace">Back</button>
+    <button class="key-sm" data-key="Tab">Tab</button>
+    <button class="key" data-key="KeyQ">Q</button>
+    <button class="key" data-key="KeyW">W</button>
+    <button class="key" data-key="KeyE">E</button>
+    <button class="key" data-key="KeyR">R</button>
+    <button class="key" data-key="KeyT">T</button>
+    <button class="key" data-key="KeyY">Y</button>
+    <button class="key" data-key="KeyU">U</button>
+    <button class="key" data-key="KeyI">I</button>
+    <button class="key" data-key="KeyO">O</button>
+    <button class="key" data-key="KeyP">P</button>
+    <button class="key" data-key="BracketLeft">[</button>
+    <button class="key" data-key="BracketRight">]</button>
+    <button class="key-sm" data-key="Backslash">\\</button>
+    <button class="key-sm" data-key="CapsLock">Caps</button>
+    <button class="key" data-key="KeyA">A</button>
+    <button class="key" data-key="KeyS">S</button>
+    <button class="key" data-key="KeyD">D</button>
+    <button class="key" data-key="KeyF">F</button>
+    <button class="key" data-key="KeyG">G</button>
+    <button class="key" data-key="KeyH">H</button>
+    <button class="key" data-key="KeyJ">J</button>
+    <button class="key" data-key="KeyK">K</button>
+    <button class="key" data-key="KeyL">L</button>
+    <button class="key" data-key="Semicolon">;</button>
+    <button class="key" data-key="Quote">'</button>
+    <button class="key-md" data-key="Enter">Enter</button>
+    <button class="key-md" data-key="ShiftLeft">Shift</button>
+    <button class="key" data-key="KeyZ">Z</button>
+    <button class="key" data-key="KeyX">X</button>
+    <button class="key" data-key="KeyC">C</button>
+    <button class="key" data-key="KeyV">V</button>
+    <button class="key" data-key="KeyB">B</button>
+    <button class="key" data-key="KeyN">N</button>
+    <button class="key" data-key="KeyM">M</button>
+    <button class="key" data-key="Comma">,</button>
+    <button class="key" data-key="Period">.</button>
+    <button class="key" data-key="Slash">/</button>
+    <button class="key-md" data-key="ShiftRight">Shift</button>
+    <button class="key" data-key="ControlLeft">Ctrl</button>
+    <button class="key" data-key="Fn">Fn</button>
+    <button class="key"><i class="fa-brands fa-windows"></i></button>
+    <button class="key" data-key="AltLeft">Alt</button>
+    <button class="key-xlg"></button>
+    <button class="key" data-key="AltRight">Alt</button>
+    <button class="key" data-key="ContextMenu">Menu</button>
+    <button class="key" data-key="ControlRight">Ctrl</button>
+
+    <div id="arrows">
+      <button class="key left" data-key="ArrowLeft">&larr;</button>
+      <button class="key down" data-key="ArrowDown">&darr;</button>
+      <button class="key up" data-key="ArrowUp">&uarr;</button>
+      <button class="key right" data-key="ArrowRight">&rarr;</button>
+    </div>
+  </div>
+</div>
+
+<script>
+  const keys = document.querySelectorAll('.key');
+  
+  document.addEventListener('keydown', function(event) {
+    const keyElement = document.querySelector(`button[data-key="${event.code}"]`);
+    if (keyElement) {
+      keyElement.classList.add('active');
+    }
+  });
+
+  document.addEventListener('keyup', function(event) {
+    const keyElement = document.querySelector(`button[data-key="${event.code}"]`);
+    if (keyElement) {
+      keyElement.classList.remove('active');
+    }
+  });
+</script>
+
+</body>
+</html>
