--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         <a href="Completed/Ripple.html">Ripple</a>
         <a href="Completed/Hex.html">Color Palette</a>
         <a href="Completed/Fluff.html">Fluff</a>
+        <a href="Completed/Keyboard.html">Keyboard</a>  
+        <a href="Completed/Colors.html">Color Combos</a>   
         <!--
-        <a href="Completed/Word of the day.html">Random Meanings</a>  
-        <a href="Completed/Quotes.html">Random Quotes</a>   
         <a href="Completed/Html Executor.html">Html v1</a>
         <a href="Completed/API Checker.html">API Checker</a>
         <a href="Completed/Walls.html">Matrix Rain Generator</a>
