--- a/Completed/Colors.html
+++ b/Completed/Colors.html
@@ -15,11 +15,13 @@
         }
         .combo {
             display: flex;
+            align-items: center;
             margin: 10px;
             border-radius: 10px;
             overflow: hidden;
             box-shadow: 0 0 20px rgba(255, 255, 255, 0.3), 0 0 30px rgba(0, 255, 255, 0.7);
             transition: transform 0.3s;
+            position: relative;
         }
         .combo:hover {
             transform: scale(1.1);
@@ -41,13 +43,34 @@
             text-align: center;
             font-size: 14px;
         }
+        .split-circle {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            overflow: hidden;
+            border: 2px solid #fff;
+        }
+        .half-circle-left {
+            width: 50%;
+            height: 100%;
+            float: left;
+        }
+        .half-circle-right {
+            width: 50%;
+            height: 100%;
+            float: right;
+        }
     </style>
 </head>
 <body>
 
     <script>
         const colorPairs = [
-            [{ name: "Dark Slate", hex: "#455453" }, { name: "Neon Blue", hex: "#00FFFF" }],
+            [{ name: "Dark Slate", hex: "#455453" }, { name: "Grey", hex: "#808080" }],
             [{ name: "Electric Lime", hex: "#CCFF00" }, { name: "Hot Pink", hex: "#FF69B4" }],
             [{ name: "Crimson", hex: "#DC143C" }, { name: "Gold", hex: "#FFD700" }],
             [{ name: "Lime Green", hex: "#32CD32" }, { name: "Medium Violet Red", hex: "#C71585" }],
@@ -89,6 +112,10 @@
                     </div>
                     <div class="color-box" style="background-color: ${pair[1].hex};">
                         <div class="color-info">${pair[1].name}<br>${pair[1].hex}</div>
+                    </div>
+                    <div class="split-circle">
+                        <div class="half-circle-left" style="background-color: ${pair[1].hex};"></div>
+                        <div class="half-circle-right" style="background-color: ${pair[0].hex};"></div>
                     </div>
                 </div>
             `;
