--- a/Completed/Colors.html
+++ b/Completed/Colors.html
@@ -9,9 +9,12 @@
             color: #fff;
             font-family: Arial, sans-serif;
             display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
+            flex-direction: column;
+            align-items: center;
             padding: 20px;
+        }
+        h1 {
+            margin-bottom: 20px;
         }
         .combo {
             display: flex;
@@ -19,13 +22,13 @@
             margin: 10px;
             border-radius: 10px;
             overflow: hidden;
-            box-shadow: 0 0 20px rgba(255, 255, 255, 0.3), 0 0 30px rgba(0, 255, 255, 0.7);
-            transition: transform 0.3s;
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
+            transition: transform 0.2s;
             position: relative;
         }
         .combo:hover {
-            transform: scale(1.1);
-            box-shadow: 0 0 40px rgba(255, 255, 255, 0.5), 0 0 60px rgba(0, 255, 255, 1);
+            transform: scale(1.05);
+            box-shadow: 0 0 15px rgba(128, 128, 128, 0.5);
         }
         .color-box {
             width: 150px;
@@ -67,6 +70,8 @@
     </style>
 </head>
 <body>
+
+    <h1>Color Combos</h1>
 
     <script>
         const colorPairs = [
