--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         <a href="Completed/Fluff.html">Fluff</a>
         <a href="Completed/Keyboard.html">Keyboard</a>  
         <a href="Completed/Colors.html">Color Combos</a>   
+        <a href="Completed/Html Executor.html"></a>
         <!--
-        <a href="Completed/Html Executor.html">Html v1</a>
         <a href="Completed/API Checker.html">API Checker</a>
         <a href="Completed/Walls.html">Matrix Rain Generator</a>
         <a href="Completed/Links.html">Links</a>
