--- a/Completed/Colors.html
+++ b/Completed/Colors.html
@@ -4,69 +4,80 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Color Combinations</title>
     <style>
-        body {
-            background-color: #121212;
-            color: #fff;
-            font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 20px;
-        }
-        h1 {
-            margin-bottom: 20px;
-        }
-        .combo {
-            display: flex;
-            align-items: center;
-            margin: 10px;
-            border-radius: 10px;
-            overflow: hidden;
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
-            transition: transform 0.2s;
-            position: relative;
-        }
-        .combo:hover {
-            transform: scale(1.05);
-            box-shadow: 0 0 15px rgba(128, 128, 128, 0.5);
-        }
-        .color-box {
-            width: 150px;
-            height: 150px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            position: relative;
-        }
-        .color-info {
-            position: absolute;
-            bottom: 10px;
-            left: 10px;
-            right: 10px;
-            text-align: center;
-            font-size: 14px;
-        }
-        .split-circle {
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            overflow: hidden;
-            border: 2px solid #fff;
-        }
-        .half-circle-left {
-            width: 50%;
-            height: 100%;
-            float: left;
-        }
-        .half-circle-right {
-            width: 50%;
-            height: 100%;
-            float: right;
-        }
+body {
+    background-color: #121212;
+    color: #fff;
+    font-family: Arial, sans-serif;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 20px;
+}
+
+h1 {
+    margin-bottom: 20px;
+    display: block; /* Ensures it behaves as a block element */
+    width: 100%; /* Make it full width */
+    text-align: center; /* Center the text */
+}
+
+.combo {
+    display: flex;
+    align-items: center;
+    margin: 10px;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
+    transition: transform 0.2s;
+    position: relative;
+}
+
+.combo:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 15px rgba(128, 128, 128, 0.5);
+}
+
+.color-box {
+    width: 150px;
+    height: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+.color-info {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    right: 10px;
+    text-align: center;
+    font-size: 14px;
+}
+
+.split-circle {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+    border: 2px solid #fff;
+}
+
+.half-circle-left {
+    width: 50%;
+    height: 100%;
+    float: left;
+}
+
+.half-circle-right {
+    width: 50%;
+    height: 100%;
+    float: right;
+}
     </style>
 </head>
 <body>
